# Lead_Generator-agent

./: .~lock.lead_tracker.xlsx#  Dockerfile  README.md  docker-compose.yml  emails.json  lead_tracker.xlsx  main.py  main_backup.py  pyproject.toml  req.txt  requirements.txt
api/: main.py  models.py
api/routes/: leads.py  tasks.py
api/services/: lead_service.py
frontend/: Dockerfile  package-lock.json
frontend/src/: App.js
src/agents/: __init__.py  base.py  emailer.py  logger.py  matcher.py  researcher.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  orchestrator.py
src/utils/: __init__.py  file_handler.py  json_parser.py  validators.py
