[project]
name = "ag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ag2[openai]>=0.9.5",
    "autogen>=0.9.5",
    "fastapi>=0.115.14",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "rich>=14.0.0",
    "typer>=0.16.0",
    "uvicorn>=0.35.0",
]
